# python-fundamentals

./: .gitignore  README.md  abc.txt  pyproject.toml
design_patterns/: adapter.py  bridge.py  chain_of_responsibility.py  command.py  composite.py  facade.py  flyweight.py  iterator.py  proxy.py  simple_factory.py  singleton.py  state.py
fundamentals/: count_strings.py  cpf_validator.py  current_datetime.py  imc.py  list_unpacking.py  string.py  strings_iterator.py  strings_manipulation.py
gui/: gui.py
gui/appCalc/: app.py
gui/appImage/: design.py  design.ui
poo/: abstract_class.py  class_object.py  context_manager.py
poo/pybank/: account.py  checking_account.py  costumer.py  person.py  savings_account.py
procedural programming/: count.py  exercise1.py  exercise2.py  exercise3.py  lambda_function.py  map_filter.py  undo_redo.py
procedural_programming/: group_by.py  itertools.py  map_filter_reduce.py
python base/: notes.py  notes.txt
python modules/: process.py
python_modules/: scraping.py
regex/: regex.py
udemy course/design_patterns/: builder.py  decorator.py  factory_method.py  mediator.py  memento.py  observer.py  prototype_1.py  singleton_metaclass.py  strategy.py  template_method.py
udemy course/fundamentals/: count_name.py  cpf_validator.py  enumerate.py  even_odd.py  list.py  passanddot.py  value_formatting.py
udemy course/gui/appImage/: app.py
udemy course/procedural_programming/: exercise1.py  exercise4.py  file_manipulation.py  functions.py  zip_functions.py
udemy course/python_modules/: threads.py
(+3 files in other folders)
