[tool.poetry]
name = "python-fundamentals"
version = "0.1.0"
description = ""
authors = ["fredsonchaves07 <fredsonchaves07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
